adjusting columns on main nav and fixing some alignment issues

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -17,7 +17,9 @@ body {
     width: 1.5rem;
 }
 
-
+.logo-font {
+    text-transform: uppercase;
+}
 
 .main-logo-link {
     width: fit-content;
@@ -74,6 +76,18 @@ body {
 a.category-badge>span.badge:hover {
     background: #212529 !important;
     color: #fff !important;
+}
+
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+.btt-link {
+    cursor: pointer;
 }
 
 /* --------------------------------- Media queries */
